tests/trybuild/typed-columns/01_wrong_table.stderr
error[E0308]: mismatched types
  --> tests/trybuild/typed-columns/01_wrong_table.rs:43:13
   |
43 |         .eq(Users::id, "x".to_string());
   |          -- ^^^^^^^^^ expected `Column<Posts, String>`, found `Column<Users, String>`
   |          |
   |          arguments to this method are incorrect
   |
   = note: expected struct `Column<Posts, std::string::String>`
              found struct `Column<Users, std::string::String>`
note: method defined here
  --> src/postgrest/typed_builder.rs
   |
   |     pub fn eq<V>(mut self, col: Column<R, V>, val: V) -> Self
   |            ^^
